<resources>
    <string name="app_name">Chato</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_incident">Incident</string>
    <!-- Strings related to login -->
    <string name="prompt_nickname">Nickname</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_firstSurname">Surname</string>
    <string name="prompt_secondSurname">Surname</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_rol">Rol</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_register">Sign up</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="register">Done!</string>
    <string name="login">Login</string>
    <string name="title" >Title</string>
    <string name="description">description\n</string>
    <string name="send">Send</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="addIncident">New Incident</string>
    <string name="detail">Details</string>
    <string name="photo">Photo</string>
    <string name="loginFragment">Login</string>
    <string name="registerFragment">Register</string>
    <string name="error_fill_fields">Please fill in all fields.</string>
    <string name="error_password_mismatch">Passwords do not match.</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_positive_button">OK</string>
    <string name="usernameLogin">Please enter a username</string>
    <string name="passwordLogin">Please enter a password</string>
    <string name="authentication">Authentication failed</string>
    <string name="snapshot">DocumentSnapshot successfully written!</string>
    <string name="errorDocument">Error writing document</string>
    <string name="permissions">Permissions not granted by the user.</string>
    <string name="noSuchDocument">No such document</string>
    <string name="gettingDocument">Error getting document</string>
    <string name="notFound">Not found</string>
    <string name="gettingCategory">Error getting category</string>
    <string name="createUser">createUserWithEmail:success</string>
    <string name="createEmail">signInWithEmail:success</string>
    <string name="createEmailFailure">signInWithEmail:failure</string>
    <string name="registeringIncident">Error registering incident</string>
    <string name="selectImage">Please select an image</string>
    <string name="addingDocument">Error adding document</string>
    <string name="writingDocument">Error writing document</string>
    <string name="writtenDocumentSnapshot">DocumentSnapshot successfully written!</string>
    <string name="fillFields">Please fill in all fields</string>
    <string name="permissionsUser">Permissions not granted by the user.</string>
    <string name="bindingFailed">Use case binding failed</string>
    <string name="photoCaptureFailed">Photo capture failed</string>
    <string name="insertingIncidents">Error inserting incidents</string>
</resources>