<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.parking.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/incident"
        android:name="com.example.parking.ui.incident.IncidentFragment"
        android:label="@string/menu_incident"
        tools:layout="@layout/fragment_incident" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.parking.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.parking.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <include app:graph="@navigation/incident" />
    <include app:graph="@navigation/home" />
</navigation>